# kinematic

./: CMakeLists.txt  package.xml
launch/: 7Dof_robot_arm.launch.py
src/: Control.cpp  Control_pub.cpp  ForwardKinematic.cpp  kinematic_receive_joint_angles.cpp
